--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis|Merriweather">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="styles/style.css">
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+		<script src="http://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.4.1/angular-google-maps.min.js"></script>
+		<script src="app.js"></script>
+		<script src="controller.js"></script>
+		<script src="js/commuteMapController.js"></script>
 	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
+	<body ng-app="myApp">
+		<div class="container-fluid">
+		  <div class="row header">
+		  	<div class="col-lg-12">
+		  		<span id="howMuchText">HOW MUCH</span><span id="co2ImageWrap"><img src="images/co2_3.png"></span> 
+		  	</div>
+		  </div>
+		  <div class="row">
+		  	<div class="col-lg-12 contentBody">
+		  		<div ui-view></div>
+		  		<!-- <div class="col-lg-6 rightBlock">
+		  			<img src="images/carSmokeCropped.png">
+		  		</div>
+		  		<div class="col-lg-6 leftBlock">
+		  			<div id="questions">
+		  				<span id="questionText">
+		  					Curious to know how much you contribute to CO2 emissions when you travel?
+		  				</span>
+		  				<div id="actionButtonsWrapper">
+		  					<button type="button" id="checkNowBtn" class="btn">Check Now</button>
+		  					<button type="button" id="checkLaterBtn" class="btn">Check Later</button>
+		  				</div>
+		  			</div>
+		  		</div> -->
+		  	</div>
+		  </div>
+		  <div class="row footer">
+		  	<div class="col-lg-12">Copyrights &copy; howMuchCO2.net</div>
+		  </div>
+		</div>
 	</body>
 </html>
